# cli/dal/model/news.gen.go
@@ -1,26 +1,0 @@
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-
-package model
-
-import (
-	"time"
-)
-
-const TableNameNews = "news"
-
-// News mapped from table <news>
-type News struct {
-	ID         int64     `gorm:"column:id;primaryKey;autoIncrement:true" json:"id"`
-	SpiderTime time.Time `gorm:"column:spider_time;not null" json:"spider_time"`
-	Site       string    `gorm:"column:site;not null" json:"site"`
-	Ranking    int32     `gorm:"column:ranking;not null" json:"ranking"`
-	Title      string    `gorm:"column:title;not null" json:"title"`
-	URL        string    `gorm:"column:url;not null" json:"url"`
-}
-
-// TableName News's table name
-func (*News) TableName() string {
-	return TableNameNews
-}
