# server/bootstrap/database.go
@@ -22,16 +22,18 @@ func prepare(db *gorm.DB) {
 	db.Exec(TableSQL)
 }
 
-const TableSQL = `CREATE TABLE IF NOT EXISTS news
-(
-    id          bigint unsigned                                                NOT NULL AUTO_INCREMENT,
-    spider_time datetime                                                       NOT NULL,
-    site        varchar(32) COLLATE utf8mb4_general_ci                         NOT NULL DEFAULT '',
-    ranking     tinyint unsigned                                               NOT NULL DEFAULT '0',
-    title       varchar(128) COLLATE utf8mb4_general_ci                        NOT NULL DEFAULT '',
-    url         varchar(2048) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NOT NULL DEFAULT '',
-    PRIMARY KEY (id),
-    KEY news_spider_time_site_index (spider_time DESC, site)
-) ENGINE = InnoDB
-  DEFAULT CHARSET = utf8mb4
-  COLLATE = utf8mb4_general_ci COMMENT ='新闻资讯表';`
+const TableSQL = "CREATE TABLE IF NOT EXISTS tops " +
+	"(" +
+	"    id          bigint unsigned                                                NOT NULL AUTO_INCREMENT," +
+	"    spider_time datetime                                                       NOT NULL," +
+	"    site        varchar(32) COLLATE utf8mb4_general_ci                         NOT NULL DEFAULT ''," +
+	"    `rank` 	 tinyint unsigned                                               NOT NULL DEFAULT '0'," +
+	"    title       varchar(128) COLLATE utf8mb4_general_ci                        NOT NULL DEFAULT ''," +
+	"    url         varchar(2048) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci NOT NULL DEFAULT ''," +
+	"    description varchar(512) COLLATE utf8mb4_general_ci                        NOT NULL DEFAULT ''," +
+	"    extra		json                                                            NOT NULL," +
+	"    PRIMARY KEY (id)," +
+	"    KEY idx_spider_time_site (spider_time DESC, site)" +
+	") ENGINE = InnoDB" +
+	"  DEFAULT CHARSET = utf8mb4" +
+	" COLLATE = utf8mb4_general_ci COMMENT ='热点资讯表';"
