# server/openapi.yaml
@@ -50,25 +50,13 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        Feed:
-            type: object
-            properties:
-                site:
-                    type: string
-                ranking:
-                    type: integer
-                    format: int32
-                title:
-                    type: string
-                url:
-                    type: string
         FeedData:
             type: object
             properties:
                 list:
                     type: array
                     items:
-                        $ref: '#/components/schemas/Feed'
+                        $ref: '#/components/schemas/Top'
         FeedRequest:
             type: object
             properties:
@@ -108,5 +96,23 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        Top:
+            type: object
+            properties:
+                spiderTime:
+                    type: string
+                site:
+                    type: string
+                rank:
+                    type: integer
+                    format: int32
+                title:
+                    type: string
+                url:
+                    type: string
+                description:
+                    type: string
+                extra:
+                    type: string
 tags:
     - name: TopHubService
